ajout de la generation de la documentation dans l'exec.sh, modif mineure de la creationsql et de AdminBD